[gd_scene load_steps=9 format=3 uid="uid://brkxffodp8drd"]

[ext_resource type="Script" path="res://scripts/player_control.gd" id="1_ar4gw"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="2_clpwj"]
[ext_resource type="PackedScene" uid="uid://c725emdf400vl" path="res://scenes/ambient_sounds.tscn" id="2_fjmwk"]
[ext_resource type="PackedScene" path="res://scenes/menus.tscn" id="3_yppsh"]
[ext_resource type="AudioStream" uid="uid://dq8yu5hpb40hm" path="res://sounds/footstep.ogg" id="6_eauhi"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_t7ue4"]
radius = 0.25
height = 2.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5gl54"]
radius = 0.25
height = 2.5

[sub_resource type="BoxShape3D" id="BoxShape3D_70rtp"]
size = Vector3(2, 2, 4)

[node name="CharacterBody3D" type="CharacterBody3D" groups=["Player"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_ar4gw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_t7ue4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0095551, -0.0102487, -0.0561953)
shape = SubResource("CapsuleShape3D_5gl54")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15105, 0)

[node name="Camera3D" type="Camera3D" parent="Neck"]

[node name="InteractRaycast" type="RayCast3D" parent="Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.009, -0.029471, -0.380296)
target_position = Vector3(0, 0, -4)
collision_mask = 2
hit_from_inside = true

[node name="Hand" type="Node3D" parent="Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.488147, -0.181499, -1.28824)

[node name="PlaceRaycast" type="RayCast3D" parent="Neck/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.009, -0.029471, -0.380296)
target_position = Vector3(0, 0, -4)
collision_mask = 4
hit_from_inside = true

[node name="Interact_Range" type="Area3D" parent="Neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.761471, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Neck/Interact_Range"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -2)
shape = SubResource("BoxShape3D_70rtp")

[node name="AmbientSounds" parent="Neck" instance=ExtResource("2_fjmwk")]

[node name="MenuRoot" parent="." instance=ExtResource("3_yppsh")]

[node name="PauseMenu" type="Control" parent="."]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_clpwj")

[node name="Resume" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Resume"

[node name="Crosshair" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="ColorRect" parent="Crosshair"]
process_mode = 4
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.691357, 0.691357, 0.691357, 1)

[node name="GeneralAI" type="Control" parent="."]
process_mode = 4
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="InteractionMessage" type="Label" parent="GeneralAI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 38.5
offset_right = 20.0
offset_bottom = 61.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="Footstep" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_eauhi")

[connection signal="body_entered" from="Neck/Interact_Range" to="." method="_on_interact_range_body_entered"]
[connection signal="body_exited" from="Neck/Interact_Range" to="." method="_on_interact_range_body_exited"]
[connection signal="pressed" from="PauseMenu/Resume" to="PauseMenu" method="_on_resume_pressed"]
